// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-dAbbOL garUdX sc-fUnMCh jqOfef r5-widget"
    transition="entering"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div
        id="email-registering-credential"
      >
        <div
          class="sc-jlZhew sc-cwHptR jHJOKY cxyQno"
        >
          mfa.email.explain
        </div>
        <form
          class="sc-gFqAkR lmligY"
          novalidate=""
        >
          <button
            class="sc-aXZVg iuRjJl"
            data-testid="submit"
            type="submit"
          >
            mfa.register.email
          </button>
        </form>
      </div>
      <div
        class="sc-eDPEul goGHMg"
      >
        <span>
          or
        </span>
      </div>
      <div
        id="phone-number-registering-credential"
      >
        <div
          class="sc-jlZhew sc-cwHptR jHJOKY cxyQno"
        >
          mfa.phoneNumber.explain
        </div>
        <form
          class="sc-gFqAkR lmligY"
          novalidate=""
        >
          <div
            class="sc-dcJsrY bhgue"
            required=""
          >
            <label
              class="sc-eqUAAy iQdVZj"
              for="phone_number"
            >
              phoneNumber
            </label>
            <input
              autocomplete="tel"
              class="sc-gsFSXq XcdvX"
              data-testid="phone_number"
              id="phone_number"
              labels="[object Object]"
              name="phone_number"
              placeholder="phoneNumber"
              required=""
              type="tel"
              value=""
            />
          </div>
          <button
            class="sc-aXZVg iuRjJl"
            data-testid="submit"
            type="submit"
          >
            mfa.register.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-dAbbOL garUdX sc-fUnMCh jqOfef r5-widget"
    transition="entering"
  >
    <div
      class="flex flex-col gap-4"
    >
      <div>
        <form
          class="sc-gFqAkR lmligY"
          novalidate=""
        >
          <button
            class="sc-aXZVg cHFTXs"
            type="submit"
          >
            mfa.remove.email
          </button>
        </form>
      </div>
      <div
        class="sc-eDPEul goGHMg"
      >
        <span>
          or
        </span>
      </div>
      <div>
        <form
          class="sc-gFqAkR lmligY"
          novalidate=""
        >
          <button
            class="sc-aXZVg cHFTXs"
            type="submit"
          >
            mfa.remove.phoneNumber
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
